<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view"
        android:gravity="center"
        android:textSize="24sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text"
            android:id="@+id/edit_text"
            android:maxLines="2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_toast"
        android:id="@+id/button_toast"
        android:textAllCaps="false"
        android:onClick="toastButton"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ImageView"
        android:id="@+id/button_imageView"
        android:textAllCaps="false"
        android:onClick="imageViewButton"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_AlertDialog"
        android:id="@+id/button_alertDiaog"
        android:textAllCaps="false"
        android:onClick="alertDialogButton"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ProgressBar"
        android:id="@+id/button_progressBar"
        android:textAllCaps="false"
        android:onClick="progressBarButton"/>
</LinearLayout>
